--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -97,7 +97,7 @@
             <!-- accepted payments column -->
             <div class="col-sm-6 col-xs-12">
               <p class="lead">Formas de Pagamento:</p>
-                <mt-radio [options]="paymentOptions"></mt-radio>
+              <mt-radio [options]="paymentOptions" name="paymentOption" ngModel></mt-radio>
             </div>
             <!-- /.col -->
             <div class="col-sm-6 col-xs-12">
